tests/build/cases/widget/module_path_malformed3.stderr
error: expected `crate`
 --> cases/widget/module_path_malformed3.rs:4:11
  |
4 | #[widget($self::widget)]
  |           ^^^^
